@@ -1,6 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) event: use pre_connection hook to properly initialize connection state for
+     slave connections. use protocol_switch hook to initialize server config
+     early based on SNI selected vhost. 
+     [Stefan Eissing]
+  
   *) mod_http2: allowing link header to specify multiple "rel" values, 
      space-separated inside a quoted string. Prohibiting push when Link parameter
      "nopush" is present.
